deploy/main/default/objects/Case/fields/Dummy__c.field-meta.xml
<CustomField>
    <fullName>Dummy__c</fullName>
    <label>Dummy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>