deploy/main/default/objects/Case/validationRules/OOE_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>OOE_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>BLANKVALUE(Counter__c, 0) &lt; 1</errorConditionFormula>
    <errorDisplayField>Counter__c</errorDisplayField>
    <errorMessage>Counter must be greater than 1</errorMessage>
</ValidationRule>