deploy/main/default/objects/Case/listViews/OOE_Queue_Case.listView-meta.xml
<ListView>
    <fullName>OOE_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>OOE: Queue</label>
    <queue>OOE_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>